core/src/duckdb/snapshots/datafusion_table_providers__duckdb__creator__tests__explain_analyze_multiple_indexes_4.snap
---
source: core/src/duckdb/creator.rs
expression: explain_result
---
┌─────────────────────────────────────┐
│┌───────────────────────────────────┐│
││    Query Profiling Information    ││
│└───────────────────────────────────┘│
└─────────────────────────────────────┘
EXPLAIN ANALYZE SELECT name FROM test_table WHERE age = 30
┌────────────────────────────────────────────────┐
│┌──────────────────────────────────────────────┐│
││              Total Time: replaced             ││
│└──────────────────────────────────────────────┘│
└────────────────────────────────────────────────┘
┌───────────────────────────┐
│           QUERY           │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│      EXPLAIN_ANALYZE      │
│    ────────────────────   │
│                           │
│           0 rows          │
│           0.00s           │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         TABLE_SCAN        │
│    ────────────────────   │
│           Table:          │
│__data_test_table_redacted│
│     redacted     │
│                           │
│      Type: Index Scan     │
│     Projections: name     │
│      Filters: age=30      │
│                           │
│                           │
│                           │
│           2 rows          │
│           0.00s           │
└───────────────────────────┘
